added abbr to logos

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <main class="margin container">
         <section class="layout hero card">
             <p class="body-ft-small">Salut, moi c'est</p>
-            <h2>Blanche Peltier</h2>
+            <h2>Blanche Peltier.</h2>
             <p class="body-ft-small">Je suis</p>
-            <p class="body-ft-big">Développeuse Web Full Stack</p>
+            <p class="body-ft-big">Développeuse Web Full Stack.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente expedita eaque quas, earum eum nulla iusto aspernatur! Impedit aperiam minima libero necessitatibus alias culpa nemo sapiente et? Quod, aliquam.</p>
 
             <ul class="social-links">
@@ -66,8 +66,12 @@
                 <p>Formation éligible à l'Aide Exeptionnelle de 6000€</p>
 
                 <div class="languages-logos">
-                    <img src="assets/images/icons/akar-icons_node-fill.svg" alt="">
-                    <img src="assets/images/icons/simple-icons_react.svg" alt="">
+                    <abbr title="Node.js">
+                        <img src="assets/images/icons/akar-icons_node-fill.svg" alt="">
+                    </abbr>
+                    <abbr title="React">
+                        <img src="assets/images/icons/simple-icons_react.svg" alt="">
+                    </abbr>
                 </div>
             </section>
 
@@ -78,15 +82,36 @@
                 <p>Décerné le 8/11/2023</p>
 
                 <div class="languages-logos">
-                    <img src="assets/images/icons/flowbite_html-solid.svg" alt="Logo of HTML language.">
-                    <img src="assets/images/icons/flowbite_css-solid.svg" alt="Logo of CSS language.">
-                    <img src="assets/images/icons/ri_javascript-fill.svg" alt="Logo of JavaScript language.">
-                    <img src="assets/images/icons/akar-icons_php-fill.svg" alt="Logo of PHP language.">
-                    <img src="assets/images/icons/simple-icons_phpmyadmin.svg" alt="Logo of PhpMyAdmin.">
-                    <img src="assets/images/icons/la_sass.svg" alt="Logo of Sass language.">
-                    <img src="assets/images/icons/mdi_symfony.svg" alt="Logo of Symfony framework.">
-                    <img src="assets/images/icons/mdi_vuejs.svg" alt="Logo of Vue.js framework.">
-                    <img src="assets/images/icons/ri_bootstrap-fill.svg" alt="Logo of Bootstrap framework.">
+                    <abbr title="">
+
+                    </abbr>
+                    <abbr title="HTML - HyperText Markup Language">
+                        <img src="assets/images/icons/flowbite_html-solid.svg" alt="Logo of HTML language.">
+                    </abbr>
+                    <abbr title="CSS - Cascading Style Sheets">
+                        <img src="assets/images/icons/flowbite_css-solid.svg" alt="Logo of CSS language.">
+                    </abbr>
+                    <abbr title="JavaScript">
+                        <img src="assets/images/icons/ri_javascript-fill.svg" alt="Logo of JavaScript language.">
+                    </abbr>
+                    <abbr title="PHP">
+                        <img src="assets/images/icons/akar-icons_php-fill.svg" alt="Logo of PHP language.">
+                    </abbr>
+                    <abbr title="phpMyAdmin">
+                        <img src="assets/images/icons/simple-icons_phpmyadmin.svg" alt="Logo of PhpMyAdmin.">
+                    </abbr>
+                    <abbr title="Sass">
+                        <img src="assets/images/icons/la_sass.svg" alt="Logo of Sass language.">
+                    </abbr>
+                    <abbr title="Symfony">
+                        <img src="assets/images/icons/mdi_symfony.svg" alt="Logo of Symfony framework.">
+                    </abbr>
+                    <abbr title="Vue.js">
+                        <img src="assets/images/icons/mdi_vuejs.svg" alt="Logo of Vue.js framework.">
+                    </abbr>
+                    <abbr title="Bootstrap">
+                        <img src="assets/images/icons/ri_bootstrap-fill.svg" alt="Logo of Bootstrap framework.">
+                    </abbr>
                 </div>
             </section>
         </section>
@@ -197,8 +222,8 @@
             <h3><span class="numerotation">03.</span> Prochaine étape ?</h3>
 
             <p class="body-ft-big">Me contacter</p>
-            <p>Je suis actuellement à la recherche d'une altenance.</p>
-            <a class="button button-contact" href="mailto:peltierblanche@gmail.com">Envoyer moi un message</a>
+            <p>En quête d'une alternance, mais je suis ouverte à toute discussion d'idées ou autres. Let's talk!</p>
+            <a class="button button-contact" href="mailto:peltierblanche@gmail.com">Envoyer moi un mail</a>
         </section>
 
     </main>
