landing page desktop mostly done

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
     
     <main class="margin container">
         <section class="layout hero card">
-            <p class="body-ft-small">Salut, moi c'est</p>
-            <h2>Blanche Peltier.</h2>
-            <p class="body-ft-small">Je suis</p>
-            <p class="body-ft-big">Développeuse Web Full Stack.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente expedita eaque quas, earum eum nulla iusto aspernatur! Impedit aperiam minima libero necessitatibus alias culpa nemo sapiente et? Quod, aliquam.</p>
+            <div class="text-wrapper">
+                <p class="body-ft-small">Salut, moi c'est</p>
+                <h2>Blanche Peltier.</h2>
+                <p class="body-ft-small">Je suis</p>
+                <p class="body-ft-big">Développeuse Web Full Stack.</p>
+                <p>Actuellement à la recherche d'une entreprise pour effectuer mon alternance.</p>
+            </div>
 
             <ul class="social-links">
                 <li><a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le profil Github">
