more projects section mostly done

--- a/index.html
+++ b/index.html
@@ -176,50 +176,53 @@
             <section class="more-projects">
                 <h4>Plus de projets</h4>
 
-                <article class="card project-card">
-                    <h5>Mini-Jeux</h5>
-                    <p>Création de mini-jeux faciles à prendre en main sur portable ou ordinateur pour se divertir en attendant son train ou lors d'une pause. Intégration d'une API pour personnaliser l'expérience.</p>
-                    <ul class="skills-list">
-                        <li>html</li>
-                        <li>css</li>
-                        <li>js</li>
-                        <li>api</li>
-                    </ul>
-                    <ul class="projects-actions">
-                        <li>
-                            <a href="https://github.com/blnche/simple-games" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
-                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://blnche.github.io/simple-games/" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
-                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
-                            </a>
-                        </li>
-                    </ul>
-                </article>
-                <article class="card project-card">
-                    <h5>Réseau Social de Voyage</h5>
-                    <p>Projet collaboratif de développement d'un réseau social où les utilisateurs peuvent organiser des voyages entre eux et suivre également ceux des autres.</p>
-                    <ul class="skills-list">
-                        <li>reactjs</li>
-                        <li>nodesjs</li>
-                        <li>mongodb</li>
-                        <li>api</li>
-                    </ul>
-                    <ul class="projects-actions">
-                        <li>
-                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
-                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
-                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
-                            </a>
-                        </li>
-                    </ul>
-                </article>
+                <div class="more-projects-wrapper">
+                    <article class="card project-card">
+                        <h5>Mini-Jeux</h5>
+                        <p>Création de mini-jeux faciles à prendre en main sur portable ou ordinateur pour se divertir en attendant son train ou lors d'une pause. Intégration d'une API pour personnaliser l'expérience.</p>
+                        <ul class="skills-list">
+                            <li>html</li>
+                            <li>css</li>
+                            <li>js</li>
+                            <li>api</li>
+                        </ul>
+                        <ul class="projects-actions">
+                            <li>
+                                <a href="https://github.com/blnche/simple-games" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                    <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://blnche.github.io/simple-games/" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                    <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                                </a>
+                            </li>
+                        </ul>
+                    </article>
+                    <article class="card project-card">
+                        <h5>Réseau Social de Voyage</h5>
+                        <p>Projet collaboratif de développement d'un réseau social où les utilisateurs peuvent organiser des voyages entre eux et suivre également ceux des autres.</p>
+                        <ul class="skills-list">
+                            <li>reactjs</li>
+                            <li>nodesjs</li>
+                            <li>mongodb</li>
+                            <li>api</li>
+                        </ul>
+                        <ul class="projects-actions">
+                            <li>
+                                <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                    <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                    <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                                </a>
+                            </li>
+                        </ul>
+                    </article>
+                </div>
+                
             </section>
         </section>
 
