static mostly done

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
     <header class="margin">
         <div class="title sticky">
-            <h1 class="hidden">Blanche Peltier - Portfolio </h1>
-            <img src="assets/images/Logo.svg" alt="Logo de Blanche Peltier.">
+            <h1>{ Blanche }</h1>
+            <!-- <img src="assets/images/Logo.svg" alt="Logo de Blanche Peltier."> -->
         </div>
         <nav id="nav">
             <ul>
                 <li><a href="#course"><span>01.</span> Formation</a></li>
                 <li><a href="#projects"><span>02.</span> Projets</a></li>
                 <li><a href="#contact"><span>03.</span> Contact</a></li>
-                <li class="button cvLink sticky">
-                    <a href="https://drive.google.com/file/d/1_h-98KLV2MGtoFM4OZzObfjOx8cAY46T/view?usp=share_link" target="_blank">CV</a>
+                <li>
+                    <a class="button cvLink sticky" href="https://drive.google.com/file/d/1_h-98KLV2MGtoFM4OZzObfjOx8cAY46T/view?usp=share_link" target="_blank">CV</a>
                 </li>
             </ul>
         </nav>
